--- a/router-compiler/build.gradle
+++ b/router-compiler/build.gradle
@@ -1,5 +1,5 @@
 apply plugin: 'com.android.library'
-
+apply plugin: 'com.github.dcendents.android-maven'
 
 sourceCompatibility = 1.7
 targetCompatibility = 1.7
